add: Page add: Media file

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -10,6 +10,59 @@
     <title>Document</title>
 </head>
 <body>
+<div class="social cell">
+    <div class="add"></div>
+    <div class="sound-img"></div>
+</div>
+<div class="main cell">
+    <div class="sub">
+        <div class="voice cell">
+            <hr class="line"/>
+            <div class="icon-box">
+                <div class="profile cell">
+                </div>
+                <div class="mic cell"></div>
+                <div class="sound cell"></div>
+                <div class="setting cell"></div>
+            </div>
+        </div>
+
+        <div class="chat cell">
+            <div class="top-box cell">
+                <div class="chat-names cell"><a class="chat-name">#</a></div>
+                <div class="thread top-icon cell"></div>
+                <div class="thread top-icon cell"></div>
+                <input type="search" class="top-icon">
+                <div class="thread top-icon cell"></div>
+                <div class="thread top-icon cell"></div>
+                <div class="thread top-icon cell"></div>
+                <div class="thread top-icon cell"></div>
+
+            </div>
+            <hr class="line"/>
+            <div class="send-chat">
+
+                <div class="plus icon cell"></div>
+                <div class="img icon cell"></div>
+                <div class="send icon cell"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
+<수정사항>
+채팅 div에서 오른쪽 사이드바 나오게
+ 할려면 위 아이콘 박스와 밑 채팅 박스를 나누어서
+ 사이드바 나오면 밑 채팅 넓이가 동적으로 동작하게?
+
+<추가>
+검색바 처음에 돋보기 모양이였다가 텍스트 입력되면
+돋보기 모양이x로 바뀌게
+검색바 클릭시 길이 늘어나는거 할건가?
+
+
+-->
 
 </body>
 </html>
