--- a/IntroPage/Intro.html
+++ b/IntroPage/Intro.html
@@ -18,7 +18,7 @@
         <p>모든 소리를 하나로 담아내어 소통의 순간을 하나로 이어주는 텍스트부터 화상까지 완벽한 통합 커뮤니케이션 플랫폼</p>
         <a href="../LoginPage/Login.html">Let's go</a>
     </div>
-    <img src="stickman.png" alt="" class="product_img">
+    <img src="mic-bg.png" alt="" class="product_img">
 </div>
 </body>
 </html>
