--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
   <body>
     <div id="modal"></div>
     <!-- <div id="root"></div> -->
-    <div id="root" style="width: 100%;height: 100%"></div>
+    <div id="root"></div>
   </body>
 </html>
